--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     <div class="max-w-4xl mx-auto px-4">
         <!-- Header -->
         <div class="text-center mb-12 glass-container p-8">
-            <h1 class="text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600">أدواتي الحسابية المالية 💡</h1>
-            <p class="text-gray-600 dark:text-gray-400 mt-2">مجموعة من الحاسبات التفاعلية لمساعدتك في اتخاذ قرارات مالية أفضل</p>
-            <p class="text-sm text-blue-500 dark:text-blue-400 mt-3">صُممت بواسطة عبدالله التويجري <span class="heartbeat text-yellow-500"><i class="fas fa-cog"></i></span> لتبسيط التخطيط المالي</p>
+            <h1 class="text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600">أدواتي الحسابية المفيدة</h1>
+            <p class="text-gray-600 dark:text-gray-400 mt-2">مجموعة من الحاسبات التفاعلية لمساعدتك في اتخاذ قرارات أفضل في مختلف جوانب الحياة</p>
+            <p class="text-sm text-blue-500 dark:text-blue-400 mt-3">صُممت بواسطة عبدالله التويجري <span class="heartbeat text-yellow-500"><i class="fas fa-cog"></i></span> لتبسيط التخطيط والحسابات اليومية</p>
         </div>
         
         <!-- Projects Grid -->
@@ -106,7 +106,7 @@
                 </div>
                 <div class="p-6">
                     <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">وفّر فلوسك في التنقل! 🚗</h2>
-                    <p class="text-gray-600 dark:text-gray-400">اكتشف كم توفر من وقتك وفلوسك وتأثيرك على البيئة في رحلاتك اليومية</p>
+                    <p class="text-gray-600 dark:text-gray-400">اكتشف كم توفر من وقتك وفلوسك وتأثيرك على البيئة في مشاوريك اليومية</p>
                 </div>
             </a>
             
