--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-4 items-center">
                 <div class="text-center md:text-right">
                     <p>صنع بواسطة عبدالله التويجري © <span id="currentYear">2023</span></p>
-                    <p class="mt-1">أدوات لتبسيط التخطيط المالي</p>
+                    <p class="mt-1">أدوات لتبسيط التخطيط والحسابات اليومية</p>
                 </div>
                 
                 <div class="text-center">
