--- a/color_palette.html
+++ b/color_palette.html
@@ -149,6 +149,12 @@
     <div class="max-w-6xl mx-auto px-4">
         <!-- Header -->
         <div class="flex justify-between items-center mb-8">
+            <!-- Back button (right side in RTL) -->
+            <div class="flex justify-start">
+                <a href="index_tools.html" class="p-2 bg-orange-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
+                  <i class="fas fa-arrow-right text-orange-600 dark:text-primary-300"></i>
+                </a>
+            </div>
             <div>
                 <h1 class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-orange-500">مولد لوحات الألوان</h1>
                 <p class="text-gray-600 dark:text-gray-400">إنشاء مجموعات ألوان متناسقة لمشاريعك التصميمية</p>
