--- a/index_tools.html
+++ b/index_tools.html
@@ -141,16 +141,17 @@
             </a>
 
             
-            <!-- Mysterious Future Project -->
-            <div class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md opacity-80 card-hover">
-                <div class="h-40 bg-gradient-to-r from-purple-500 to-indigo-600 flex items-center justify-center">
-                    <i class="fas fa-question-circle text-white text-5xl"></i>
+            <!-- Add this card to the "Tools Grid" section, before the "Mysterious Future Project" div -->
+            <a href="data_quality.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
+                <div class="h-40 bg-gradient-to-r from-blue-500 to-green-500 flex items-center justify-center">
+                    <i class="fas fa-database text-white text-5xl"></i>
                 </div>
                 <div class="p-6">
-                    <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">قريباً... 🔮</h2>
-                    <p class="text-gray-600 dark:text-gray-400">أداة جديدة ستضاف قريباً، ترقبوا المزيد من الأدوات المفيدة!</p>
+                    <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">مقياس جودة البيانات 📊</h2>
+                    <p class="text-gray-600 dark:text-gray-400">تحليل وتنظيف وتحسين جودة البيانات الخاصة بك بطريقة فعالة</p>
                 </div>
-            </div>
+            </a>
+
         </div>
         
         <!-- Footer -->
