--- a/color_picker.html
+++ b/color_picker.html
@@ -157,9 +157,14 @@
     <div class="max-w-6xl mx-auto px-4">
         <!-- Header -->
         <div class="flex justify-between items-center mb-8">
+            <div class="flex justify-start">
+                <a href="index_tools.html" class="p-2 bg-purple-300 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
+                  <i class="fas fa-arrow-right text-purple-600 dark:text-primary-300"></i>
+                </a>
+            </div>
             <div>
-                <h1 class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600">مستخرج الألوان</h1>
-                <p class="text-gray-600 dark:text-gray-400">استخرج الألوان من الصور واحصل على أكواد الألوان بسهولة</p>
+                <h1 class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600 text-center">مستخرج الألوان</h1>
+                <p class="text-gray-600 dark:text-gray-400 text-center">استخرج الألوان من الصور واحصل على أكواد الألوان بسهولة</p>
             </div>
             <div class="flex space-x-3 space-x-reverse items-center">
                 <!-- Theme Toggle Switch -->
