--- a/qr_gen.html
+++ b/qr_gen.html
@@ -104,8 +104,13 @@
     <div class="max-w-6xl mx-auto px-4">
         <!-- Header -->
         <div class="flex justify-between items-center mb-8">
+            <div class="flex justify-start">
+                <a href="index_tools.html" class="p-2 bg-purple-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
+                  <i class="fas fa-arrow-right text-primary-600 dark:text-primary-300"></i>
+                </a>
+            </div>
             <div>
-                <h1 class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600">QR-Gen</h1>
+                <h1 class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600 text-center">QR-Gen</h1>
                 <p class="text-gray-600 dark:text-gray-400">إنشاء رموز QR مخصصة لموقعك الإلكتروني أو عملك أو استخدامك الشخصي</p>
             </div>
             <div class="flex space-x-3 space-x-reverse items-center">
