--- a/index_tools.html
+++ b/index_tools.html
@@ -161,6 +161,17 @@
                 </div>
             </a>
 
+            <!-- To-Do List Card -->
+            <a href="todo_list.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
+                <div class="h-40 bg-gradient-to-r from-emerald-500 to-cyan-500 flex items-center justify-center">
+                    <i class="fas fa-tasks text-white text-5xl"></i>
+                </div>
+                <div class="p-6">
+                    <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">قائمة المهام التفاعلية ✅</h2>
+                    <p class="text-gray-600 dark:text-gray-400">نظّم مهامك وزِد من إنتاجيتك مع إمكانية السحب والإفلات والمهام الفرعية</p>
+                </div>
+            </a>
+
             <!-- Color Palette Generator Card -->
             <a href="color_palette.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
                 <div class="h-40 bg-gradient-to-r from-pink-500 to-orange-500 flex items-center justify-center">
