--- a/index_tools.html
+++ b/index_tools.html
@@ -128,6 +128,17 @@
                 </div>
             </a>
 
+            <!-- Add this card to the "Tools Grid" section -->
+            <a href="content_calendar.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
+                <div class="h-40 bg-gradient-to-r from-violet-500 to-purple-600 flex items-center justify-center">
+                    <i class="fas fa-calendar-alt text-white text-5xl"></i>
+                </div>
+                <div class="p-6">
+                    <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">تقويم المحتوى 📅</h2>
+                    <p class="text-gray-600 dark:text-gray-400">تخطيط وتنظيم جدول المحتوى الخاص بك على جميع منصات التواصل الاجتماعي</p>
+                </div>
+            </a>
+
             <!-- Color Picker Card -->
             <a href="color_picker.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
                 <div class="h-40 bg-gradient-to-r from-pink-500 to-orange-500 flex items-center justify-center">
