--- a/color_picker.html
+++ b/color_picker.html
@@ -158,7 +158,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-8">
             <div class="flex justify-start">
-                <a href="index_tools.html" class="p-2 bg-purple-300 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
+                <a href="index.html" class="p-2 bg-purple-300 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
                   <i class="fas fa-arrow-right text-purple-600 dark:text-primary-300"></i>
                 </a>
             </div>
@@ -341,7 +341,7 @@
         
         <!-- Back to Tools Page Button -->
         <div class="flex justify-center mt-8">
-            <a href="index_tools.html" class="bg-gradient-to-r from-blue-600 to-purple-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
+            <a href="index.html" class="bg-gradient-to-r from-blue-600 to-purple-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
                 <i class="fas fa-arrow-right ml-2"></i>
                 العودة إلى صفحة الأدوات
             </a>
