--- a/data_quality.html
+++ b/data_quality.html
@@ -211,7 +211,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-8">
             <div class="flex justify-start">
-                <a href="index_tools.html" class="p-2 bg-purple-300 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
+                <a href="index.html" class="p-2 bg-purple-300 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
                   <i class="fas fa-arrow-right text-purple-600 dark:text-primary-300"></i>
                 </a>
             </div>
@@ -860,7 +860,7 @@
                     <div class="bg-gray-50 dark:bg-gray-800 p-6 rounded-lg">
                         <h3 class="text-lg font-bold mb-4 text-blue-600 dark:text-blue-400">معلومات الإصدار</h3>
                         <p class="text-gray-700 dark:text-gray-300">الإصدار: 1.0.0</p>
-                        <p class="text-gray-700 dark:text-gray-300">آخر تحديث: <span id="lastUpdated">يوليو 2025</span></p>
+                        <p class="text-gray-700 dark:text-gray-300">آخر تحديث: <span id="lastUpdated">مايو 2025</span></p>
                     </div>
                 </div>
             </div>
@@ -868,7 +868,7 @@
         
         <!-- Back to Tools Page Button -->
         <div class="flex justify-center mt-8">
-            <a href="index_tools.html" class="bg-gradient-to-r from-blue-600 to-purple-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
+            <a href="index.html" class="bg-gradient-to-r from-blue-600 to-purple-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
                 <i class="fas fa-arrow-right ml-2"></i>
                 العودة إلى صفحة الأدوات
             </a>
@@ -877,7 +877,7 @@
 
     <!-- Footer -->
     <footer class="mt-12 text-center text-gray-500 dark:text-gray-400 text-sm">        
-        <p>© <span id="currentYear">2023</span> مقياس جودة البيانات - جميع الحقوق محفوظة</p>
+        <p>© <span id="currentYear">2025</span> مقياس جودة البيانات - جميع الحقوق محفوظة</p>
     </footer>
 
     <script>
