--- a/family_housing_calculator.html
+++ b/family_housing_calculator.html
@@ -78,7 +78,7 @@
     <div class="grid grid-cols-3 items-center mb-8">
       <!-- Back button (right side in RTL) -->
       <div class="flex justify-start">
-        <a href="/" class="p-2 bg-primary-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
+        <a href="/index.html" class="p-2 bg-primary-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
           <i class="fas fa-arrow-right text-primary-600 dark:text-primary-300"></i>
         </a>
       </div>
