--- a/color_palette.html
+++ b/color_palette.html
@@ -151,7 +151,7 @@
         <div class="flex justify-between items-center mb-8">
             <!-- Back button (right side in RTL) -->
             <div class="flex justify-start">
-                <a href="index_tools.html" class="p-2 bg-orange-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
+                <a href="index.html" class="p-2 bg-orange-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
                   <i class="fas fa-arrow-right text-orange-600 dark:text-primary-300"></i>
                 </a>
             </div>
@@ -487,7 +487,7 @@
         
         <!-- Back to Tools Page Button -->
         <div class="flex justify-center mt-8">
-            <a href="index_tools.html" class="bg-gradient-to-r from-pink-500 to-orange-500 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
+            <a href="index.html" class="bg-gradient-to-r from-pink-500 to-orange-500 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
                 <i class="fas fa-arrow-right ml-2"></i>
                 العودة إلى صفحة الأدوات
             </a>
