--- a/commute-calculator.html
+++ b/commute-calculator.html
@@ -94,7 +94,7 @@
         <div class="flex justify-between items-center mb-8">
             <!-- Back button (right side in RTL) -->
             <div class="flex justify-start">
-              <a href="/" class="p-2 bg-purple-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
+              <a href="/index.html" class="p-2 bg-purple-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
                 <i class="fas fa-arrow-right text-purple-600 dark:text-primary-300"></i>
               </a>
             </div>
