--- a/content_calendar.html
+++ b/content_calendar.html
@@ -256,7 +256,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-8">
             <div class="flex justify-start">
-                <a href="index_tools.html" class="p-2 bg-violet-300 dark:bg-violet-900 rounded-full hover:bg-violet-200 dark:hover:bg-violet-800 transition-colors">
+                <a href="index.html" class="p-2 bg-violet-300 dark:bg-violet-900 rounded-full hover:bg-violet-200 dark:hover:bg-violet-800 transition-colors">
                   <i class="fas fa-arrow-right text-violet-600 dark:text-violet-300"></i>
                 </a>
             </div>
@@ -673,7 +673,7 @@
         
         <!-- Back to Tools Page Button -->
         <div class="flex justify-center mt-8">
-            <a href="index_tools.html" class="bg-gradient-to-r from-violet-600 to-pink-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
+            <a href="index.html" class="bg-gradient-to-r from-violet-600 to-pink-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
                 <i class="fas fa-arrow-right ml-2"></i>
                 العودة إلى صفحة الأدوات
             </a>
