--- a/email_signature.html
+++ b/email_signature.html
@@ -150,7 +150,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-8">
             <div class="flex justify-start">
-                <a href="index_tools.html" class="p-2 bg-teal-100 dark:bg-teal-900 rounded-full hover:bg-teal-200 dark:hover:bg-teal-800 transition-colors">
+                <a href="index.html" class="p-2 bg-teal-100 dark:bg-teal-900 rounded-full hover:bg-teal-200 dark:hover:bg-teal-800 transition-colors">
                   <i class="fas fa-arrow-right text-teal-600 dark:text-teal-300"></i>
                 </a>
             </div>
@@ -546,7 +546,7 @@
         
         <!-- Back to Tools Page Button -->
         <div class="flex justify-center mt-8">
-            <a href="index_tools.html" class="bg-gradient-to-r from-emerald-600 to-teal-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
+            <a href="index.html" class="bg-gradient-to-r from-emerald-600 to-teal-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
                 <i class="fas fa-arrow-right ml-2"></i>
                 العودة إلى صفحة الأدوات
             </a>
