--- a/qr_gen.html
+++ b/qr_gen.html
@@ -105,7 +105,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-8">
             <div class="flex justify-start">
-                <a href="index_tools.html" class="p-2 bg-purple-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
+                <a href="index.html" class="p-2 bg-purple-100 dark:bg-primary-900 rounded-full hover:bg-primary-200 dark:hover:bg-primary-800 transition-colors">
                   <i class="fas fa-arrow-right text-primary-600 dark:text-primary-300"></i>
                 </a>
             </div>
