--- a/todo_list.html
+++ b/todo_list.html
@@ -240,7 +240,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-8">
             <div class="flex justify-start">
-                <a href="index_tools.html" class="p-2 bg-emerald-300 dark:bg-emerald-900 rounded-full hover:bg-emerald-200 dark:hover:bg-emerald-800 transition-colors">
+                <a href="index.html" class="p-2 bg-emerald-300 dark:bg-emerald-900 rounded-full hover:bg-emerald-200 dark:hover:bg-emerald-800 transition-colors">
                   <i class="fas fa-arrow-right text-emerald-600 dark:text-emerald-300"></i>
                 </a>
             </div>
@@ -752,7 +752,7 @@
         
         <!-- Back to Tools Page Button -->
         <div class="flex justify-center mt-8">
-            <a href="index_tools.html" class="bg-gradient-to-r from-emerald-600 to-cyan-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
+            <a href="index.html" class="bg-gradient-to-r from-emerald-600 to-cyan-600 text-white px-6 py-3 rounded-lg hover:opacity-90 transition-colors shadow-md flex items-center">
                 <i class="fas fa-arrow-right ml-2"></i>
                 العودة إلى صفحة الأدوات
             </a>
