--- a/index.html
+++ b/index.html
@@ -323,6 +323,18 @@
                                 <p class="text-gray-600 dark:text-gray-400">إنشاء توقيعات بريد إلكتروني احترافية وجذابة بسهولة</p>
                             </div>
                         </a>
+
+                                                <!-- Image Position Checker Card -->
+                        <a href="imagePosCheck.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
+                            <div class="h-40 bg-gradient-to-r from-blue-500 to-cyan-500 flex items-center justify-center">
+                                <i class="fas fa-crosshairs text-white text-5xl"></i>
+                            </div>
+                            <div class="p-6">
+                                <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">محدد الإحداثيات 🎯</h2>
+                                <p class="text-gray-600 dark:text-gray-400">أداة تساعدك في تحديد إحداثيات النقاط على الصور بدقة عالية لمشاريع التصميم</p>
+                            </div>
+                        </a>
+
                     </div>
                 </section>
             </div>
