--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@
                             </div>
                         </a>
                         
+                        <!-- Data Cleaning Tool Card -->
+                        <a href="data-cleaning.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
+                            <div class="h-40 bg-gradient-to-r from-slate-700 via-blue-800 to-indigo-900 flex items-center justify-center">
+                                <i class="fas fa-broom text-white text-5xl"></i>
+                            </div>
+                            <div class="p-6">
+                                <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">أداة تنظيف البيانات 🧹</h2>
+                                <p class="text-gray-600 dark:text-gray-400">تحليل شامل وتنظيف احترافي للبيانات مع كشف القيم الشاذة والمكررة</p>
+                            </div>
+                        </a>
+
                         <!-- Regex Designer Card -->
                         <a href="regex_designer.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
                             <div class="h-40 bg-gradient-to-r from-indigo-500 to-purple-500 flex items-center justify-center">
