--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
                                 أدوات متنوعة
                             </a>
                         </li>
+                        <!-- Add this to the sidebar navigation list -->
+                        <li>
+                            <a href="#privacy-tools" class="nav-link">
+                                <i class="fas fa-shield-alt ml-2"></i>
+                                أدوات الخصوصية
+                            </a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -348,6 +356,30 @@
 
                     </div>
                 </section>
+
+                <!-- Add this as a new section before the existing utility tools section -->
+
+                <!-- Section: Privacy & Security Tools -->
+                <section id="privacy-tools" class="mb-16">
+                    <h2 class="text-2xl font-bold mb-6 bg-clip-text text-transparent bg-gradient-to-r from-red-600 to-pink-600 section-title">
+                        <i class="fas fa-shield-alt ml-2"></i>أدوات الخصوصية والأمان
+                    </h2>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <!-- Browser Data Education Card -->
+                        <a href="browser_data_education.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
+                            <div class="h-40 bg-gradient-to-r from-red-500 to-pink-600 flex items-center justify-center">
+                                <i class="fas fa-user-secret text-white text-5xl"></i>
+                            </div>
+                            <div class="p-6">
+                                <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">ما يعرفه المتصفح عنك 🔍</h2>
+                                <p class="text-gray-600 dark:text-gray-400">اكتشف المعلومات التي يمكن للمواقع جمعها عنك وتعلم كيفية حماية خصوصيتك الرقمية</p>
+                            </div>
+                        </a>
+
+                        <!-- You can add more privacy/security tools here in the future -->
+                    </div>
+                </section>
+
             </div>
         </div>
         
