--- a/index.html
+++ b/index.html
@@ -211,6 +211,17 @@
                                 <p class="text-gray-600 dark:text-gray-400">تصميم واختبار التعابير النمطية (Regex) لمعالجة وتحليل النصوص</p>
                             </div>
                         </a>
+
+                        <!-- Sample Size Calculator Card -->
+                        <a href="sample_size_calculator.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
+                            <div class="h-40 bg-gradient-to-r from-purple-500 to-pink-500 flex items-center justify-center">
+                                <i class="fas fa-chart-bar text-white text-5xl"></i>
+                            </div>
+                            <div class="p-6">
+                                <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">حاسبة حجم العينة 📈</h2>
+                                <p class="text-gray-600 dark:text-gray-400">احسب حجم العينة المثالي للدراسات والبحوث الإحصائية بدقة علمية</p>
+                            </div>
+                        </a>
                     </div>
                 </section>
                 
