--- a/index.html
+++ b/index.html
@@ -222,6 +222,17 @@
                                 <p class="text-gray-600 dark:text-gray-400">احسب حجم العينة المثالي للدراسات والبحوث الإحصائية بدقة علمية</p>
                             </div>
                         </a>
+
+                        <!-- Data Flow Diagram Generator Card -->
+                        <a href="data_flow_diagram_generator.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
+                            <div class="h-40 bg-gradient-to-r from-cyan-500 via-blue-500 to-indigo-600 flex items-center justify-center">
+                                <i class="fas fa-project-diagram text-white text-5xl"></i>
+                            </div>
+                            <div class="p-6">
+                                <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">مولد مخططات تدفق البيانات 🔀</h2>
+                                <p class="text-gray-600 dark:text-gray-400">أداة احترافية لإنشاء وتصميم مخططات تدفق البيانات التفاعلية مع إمكانيات تصدير متقدمة</p>
+                            </div>
+                        </a>
                     </div>
                 </section>
                 
