--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <li>
                             <a href="#calculators" class="nav-link">
                                 <i class="fas fa-calculator ml-2"></i>
-                                الحاسبات المالية
+                                الحاسبات والأدوات
                             </a>
                         </li>
                         <li>
@@ -239,7 +239,7 @@
                 <!-- Section 2: Calculators -->
                 <section id="calculators" class="mb-16">
                     <h2 class="text-2xl font-bold mb-6 bg-clip-text text-transparent bg-gradient-to-r from-blue-600 to-purple-600 section-title">
-                        <i class="fas fa-calculator ml-2"></i>الحاسبات المالية
+                        <i class="fas fa-calculator ml-2"></i>الحاسبات والأدوات
                     </h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <!-- Commute Calculator Card -->
@@ -261,6 +261,17 @@
                             <div class="p-6">
                                 <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">بيت العيلة 🏡</h2>
                                 <p class="text-gray-600 dark:text-gray-400">أشتري ولا أستأجر؟ حاسبة ذكية تساعدك تختار الأفضل لعائلتك المتنامية</p>
+                            </div>
+                        </a>
+                        
+                        <!-- Health Calculator Card -->
+                        <a href="health_calculator.html" class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-md card-hover">
+                            <div class="h-40 bg-gradient-to-r from-green-500 to-emerald-600 flex items-center justify-center">
+                                <i class="fas fa-heartbeat text-white text-5xl"></i>
+                            </div>
+                            <div class="p-6">
+                                <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-2">حاسبة الصحة 💚</h2>
+                                <p class="text-gray-600 dark:text-gray-400">احسب مؤشر كتلة الجسم ومعدل الأيض الأساسي والسعرات اليومية المطلوبة</p>
                             </div>
                         </a>
                     </div>
